--- a/api-web/pom.xml
+++ b/api-web/pom.xml
@@ -60,6 +60,14 @@
             <version>5.8.16</version>
         </dependency>
 
+        <!--接口限流-->
+        <!--<dependency>-->
+        <!--    <groupId>com.google.guava</groupId>-->
+        <!--    <artifactId>guava</artifactId>-->
+        <!--    <version>30.1.1-jre</version>-->
+        <!--</dependency>-->
+
+
         <!--公共类-->
         <dependency>
             <groupId>com.ming</groupId>
@@ -103,6 +111,22 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <!--seata分布式事务-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>0.42</version>
         </dependency>
 
         <!--整合nacos-->
