--- a/api-web/src/main/resources/application.yaml
+++ b/api-web/src/main/resources/application.yaml
@@ -3,130 +3,6 @@ server:
 spring:
   application:
     name: api-web
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/api_open
-    username: root
-    password: 123456
-  # redis相关
-  redis:
-    # Redis数据库索引（默认为0）
-    database: 2
-    # 云服务器地址
-    host: localhost
-    lettuce:
-      pool:
-        # 连接池最大连接数（使用负值表示没有限制）
-        max-active: 20
-        # 最大阻塞等待时间(负数表示没限制)
-        max-wait: -1
-        # 连接池中的最大空闲连接
-        max-idle: 5
-        # 连接池中的最小空闲连接
-        min-idle: 0
-    # redis密码
-    #    password:
-    # Redis服务器连接端口
-    port: 6379
-    # 连接超时时间（毫秒）
-    timeout: 1800000
-  # rabbitMq
-  rabbitmq:
-    host: www.mingzib.xyz
-    #    host: 192.168.131.3
-    port: 5673
-    username: admin
-    password: 1940307627
-    #    username: guest
-    #    password: guest
-    listener:
-      simple:
-        retry:
-          enabled: true
-          max-attempts: 3 #最大重试次数
-          initial-interval: 3000 #重试间隔时间（单位毫秒）
-  # 邮箱配置
-  mail:
-    host: smtp.qq.com
-    username: 1940307627@qq.com
-    password: yxnmblbfwvjndibh
-    default-encoding: UTF-8
-    port: 587
-    properties:
-      mail:
-      smtp:
-      auth: true
-      socketFactory:
-      class: javax.net.ssl.SSLSocketFactory
-  # 防止swagger报错
-  mvc:
-    pathmatch:
-      matching-strategy: ANT_PATH_MATCHER
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-        username: nacos
-        password: nacos
-        namespace: public
-    alibaba:
-      seata:
-        tx-service-group: beiJing #配置事务分组
-seata:
-  registry:
-    # 配置seata的注册中心， 告诉seata client 怎么去访问seata server(TC)
-    type: nacos
-    nacos:
-      server-addr: 127.0.0.1:8848  # seata server 所在的nacos服务地址
-      application: seata-server    # seata server 的服务名seata-server ，如果没有修改可以不配
-      username: nacos
-      password: nacos
-      group: SEATA_GROUP          # seata server 所在的组，默认就是SEATA_GROUP，没有改也可以不配
-  # 读取nacos中的配置
-  config:
-    type: nacos
-    nacos:
-      server-addr: 127.0.0.1:8848
-      username: nacos
-      password: nacos
-      group: SEATA_GROUP
-
-web:
-  # 前端地址，用于邮件通知
-  front: http://localhost:3000/
-  # 当前服务器地址,用于告知前端发送地址
-  backend: http://localhost:8080/
-  # SDk的绝对路径
-  sdkPath: F:\Java_IDEA练习\apiOpen\apiOpen-backend\api-web\lib\api-client-sdk-0.0.1.jar
-
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: false
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-dubbo:
-  application:
-    name: dubbo-springboot-demo-provider
-  protocol:
-    name: dubbo
-    port: -1
-  registry:
-    id: nacos-registry
-    address: nacos://localhost:8848
-
-# 上传文件
-upload:
-  # 上传文件模式
-  mode: local
-  # 本地上传
-  local:
-    # nginx映射本地文件位置
-    url: http://127.0.0.1/apiFile/
-    # 本地文件存储路径
-    path: F:/Java_IDEA练习/apiOpen/uploadFile/
-
-# 整合自己的client-sdk
-#openapi:
-#  client:
-#    access-key: 58479c236fa584218fe4d2b02da9c8c3
-#    secret-key: 2e1b2a8f19a3fd7b07e9becd4c0a909f
+  # 选择使用开发环境还是生产环境
+  profiles:
+    active: prod
